# fastapi-observability

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  Justfile  README.md  RELEASE.md  SECURITY.md  justfile  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
e2e/: Dockerfile  Dockerfile.dockerignore  README.md  pyproject.toml
e2e/app/: __init__.py  main.py
examples/: basic.py
examples/aws/: main.py
examples/azure/: main.py
examples/basic/: main.py
examples/gcp/: main.py
examples/local_wrapper/: applog.py
src/fastapi_request_observability/: __init__.py  _context.py  access.py  logging.py  middleware.py  trace.py
tests/: _client.py  check_distribution.py  smoke_test.py  test_access.py  test_context.py  test_dependency_policy.py  test_distribution_links.py  test_examples.py  test_logging.py  test_middleware.py  test_trace.py
