[project]
name = "fastapi-request-observability"
version = "0.1.0"
description = "FastAPI middleware for request IDs, trace correlation, and structured access logs"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jani Mikkonen" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["fastapi>=0.139.0"]

[project.urls]
Repository = "https://github.com/janisto/fastapi-observability"
Issues = "https://github.com/janisto/fastapi-observability/issues"
Changelog = "https://github.com/janisto/fastapi-observability/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # HTTPX2 is the repository's only HTTP client. Do not add deprecated HTTPX.
    "httpx2>=2.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.10",
    "ty>=0.0.24",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ANN", "ASYNC", "B", "BLE", "C4", "DTZ", "E", "F", "I", "LOG", "PERF", "PIE", "PT", "RET", "RUF", "S", "SIM", "T20", "TRY", "UP", "W"]
ignore = [
    "ANN401", # Public callback payloads and JSON values are intentionally Any.
    "E501",   # Formatting is owned by Ruff.
    "TRY003", # Public validation and diagnostic messages are clearer inline.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "PLR2004", "S101"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["fastapi_request_observability"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.ty.src]
include = ["src", "tests"]
