[project]
name = "fastapi-request-observability"
version = "0.2.1"
description = "FastAPI middleware for request IDs, trace correlation, and structured access logs"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jani Mikkonen" }]
keywords = [
    "access logging",
    "asgi",
    "cloud logging",
    "fastapi",
    "json logging",
    "middleware",
    "observability",
    "request id",
    "structured logging",
    "trace correlation",
    "w3c trace context",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
dependencies = ["fastapi>=0.139.0"]

[project.urls]
Repository = "https://github.com/janisto/fastapi-observability"
Issues = "https://github.com/janisto/fastapi-observability/issues"
Changelog = "https://github.com/janisto/fastapi-observability/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # HTTPX2 is the repository's only HTTP client. Do not add deprecated HTTPX.
    "httpx2>=2.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.10",
    "ty>=0.0.24",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Conflicts with the Ruff formatter.
    "E501",   # Line length is owned by the Ruff formatter.
    "EM101",  # Inline exception messages are clearer for validation failures.
    "EM102",  # Inline formatted exception messages preserve local context.
    "ISC001", # Conflicts with the Ruff formatter.
    "TRY003", # Public validation and diagnostic messages are clearer inline.
]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["INP001"]
"src/fastapi_request_observability/access.py" = ["C901", "PLR0915"]
"src/fastapi_request_observability/trace.py" = ["PLR0911"]
"tests/**/*.py" = ["ANN", "ARG", "C901", "D", "EM", "PLR2004", "S101", "TRY003"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["fastapi_request_observability"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.ty.src]
include = ["examples", "src", "tests"]

[tool.ty.analysis]
strict-literal-narrowing = true

[tool.ty.environment]
python-platform = "all"
python-version = "3.13"

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true
